--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,3 +1,4 @@
+/*-- INICIO HEADER --*/
 .navContainer {
     min-height: 3.375rem;
     background-color: $color-gris;
@@ -81,3 +82,5 @@ a.nav-link {
         display: none;
     }
 }
+
+/*-- FIN HEADER --*/
