--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,3 +1,4 @@
+/*-- INICIO CONTACTO --*/
 .contenedorContacto {
     display: flex;
     flex-direction: column;
@@ -88,3 +89,5 @@
 
 /*-----DESKTOP-----*/
 // @media only screen and (min-width: 992px) {}
+
+/*-- FIN CONTACTO --*/
