--- a/scss/_evolucion.scss
+++ b/scss/_evolucion.scss
@@ -1,3 +1,4 @@
+/*-- INICIO EVOLUCIÓN --*/
 @for $i from 1 through 4 {
     .containerEvolucion__item#{$i} {
         grid-area: evolucionItem#{$i};
@@ -41,6 +42,9 @@
 
         & .containerSeccionTexto {
             padding: 0 4rem 2rem 4rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
 
             & .seccionTexto {
                 column-count: 1;
@@ -79,7 +83,7 @@
             grid-template-rows: auto;
 
             & .containerSeccionTexto {
-                margin: 0 2rem 0 0;
+               margin: 0 2rem 0 0;
                 border-bottom: solid 2px black;
                 padding: 0;
 
@@ -124,6 +128,7 @@
 
             & .containerSeccionTexto {
                 border-bottom: 0;
+                display: none;
             }
         }
     }
@@ -139,8 +144,10 @@
         }
 
         .containerEvolucion__item4__imagen-#{$i}:hover~.containerEvolucion__item4__explicacion-#{$i} {
-            display: block;
+            display: flex;
             animation: aparicion 1s ease 0s 1 normal forwards;
         }
     }
 }
+
+/*-- FIN EVOLUCIÓN --*/
