--- a/scss/_fuentes-iconos.scss
+++ b/scss/_fuentes-iconos.scss
@@ -1,3 +1,6 @@
+/*-- INICIO FUENTES & ÍCONOS --*/
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
+
+/*-- FIN FUENTES & ÍCONOS --*/
