--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,3 +1,4 @@
+/*-- INICIO INDEX --*/
 .containerHome {
     display: grid;
     grid-template-rows: minmax(333px, 1.5fr) minmax(333px, 1fr) minmax(333px, 1fr) minmax(333px, 1fr);
@@ -113,3 +114,5 @@ $extension in $secciones {
         }
     }
 }
+
+/*-- FIN INDEX --*/
