--- a/scss/_satelite.scss
+++ b/scss/_satelite.scss
@@ -1,3 +1,4 @@
+/*-- INICIO SATÉLITE --*/
 @for $i from 1 through 3 {
     .containerSatelite__item#{$i} {
         grid-area: sateliteItem#{$i};
@@ -66,6 +67,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     text-align: center;
+    margin-top: 2rem;
 }
 
 /*-----TABLET-----*/
@@ -97,7 +99,18 @@
             grid-template-columns: 10vw repeat(9, auto);
             text-align: center;
             align-items: center;
-            margin: 2rem 4rem;
+            margin: 2rem 0;
+            grid-gap: 1rem;
+
+            & .containerImagen {
+                padding: .5rem;
+            }
+
+            & img {
+                width: 100%;
+            }
         }
     }
 }
+
+/*-- FIN SATÉLITE --*/
