--- a/scss/_tienda.scss
+++ b/scss/_tienda.scss
@@ -1,3 +1,4 @@
+/*-- INICIO TIENDA --*/
 /*BARRA TIENDA*/
 .barraNavTienda {
     box-shadow: 0 3px 35px 0 rgba(0, 0, 0, 0.3);
@@ -35,6 +36,10 @@
 .showroomProductos {
     max-width: 1200px;
     margin: auto;
+
+    & .carousel {
+        display: none;
+    }
 }
 
 /*CAROUSEL*/
@@ -44,26 +49,26 @@
 
 /*CATEGORIAS*/
 .contenedorCategorias {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, 100vw);
+    row-gap: 1rem;
 }
 
 .categoria {
-    display: inline-block;
-    position: relative;
-    text-align: center !important;
-    margin: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
 
-    &>img {
-        width: 100%;
-    }
-
-    &__texto {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 100%;
-        transform: translate(-50%, -50%);
+@each $categoria in $categorias {
+    .imagen-categoria-#{$categoria} {
+        background-image: url("../media/tienda/tienda-categoria-#{$categoria}.jpeg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
     }
 }
 
@@ -82,7 +87,7 @@
     }
 }
 
-/*CARTES NECESITAS AYUDA*/
+/*CARTEL NECESITAS AYUDA*/
 .contenedorNecesitasAyuda {
     position: fixed;
     bottom: 1rem;
@@ -110,14 +115,26 @@
 @media only screen and (min-width: 768px) {
     .showroomProductos {
         padding: 0 1rem;
+
+        & .carousel {
+            display: inline-block;
+        }
+    }
+
+    .categoria {
+        margin: 0;
     }
 
     .contenedorCategorias {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        column-gap: 1rem;
+        grid-template-rows: repeat(2, minmax(30%, 400px));
+        grid-gap: 1rem;
+        margin: 1rem 0;
     }
 }
 
 /*-----DESKTOP-----*/
 // @media only screen and (min-width: 992px) {}
+
+/*-- FIN TIENDA --*/
