--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,3 +3,4 @@ $color-gris-oscuro: #756F6E;
 $color-blanco: #FFFFFF;
 $secciones: ("Satelite": "satelite", "Evolucion": "evolucion",
 "Exploracion": "exploracion", "Tienda": "tienda");
+$categorias: ("indumentaria", "telescopios", "hogar", "jugueteria", "varios", "ofertas");
